# simple-transformer

./: .gitignore  README.md  pyproject.toml
src/: self_attention.py
src/simple_transformer/: __init__.py  encoder.py  self_attention.py  transformer.py  transformer_block.py
